--- a/request.html
+++ b/request.html
@@ -223,6 +223,30 @@
           </div>
         </div>
       </section>
+
+      <!-- Floating Contact Widget -->
+      <section class="social-contact-section">
+        <!-- Main Message Icon (Trigger) -->
+        <div class="contact-trigger">
+          <i class="fa-solid fa-message"></i>
+        </div>
+
+        <!-- Hidden Popup -->
+        <ul class="contact-popup">
+          <li>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-phone"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- footer -->
@@ -272,8 +296,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="service.html">Services</a></li>
             </ul>
           </div>
 
