--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
   <section class="hero-about">
     <div class="hero-overlay"></div>
     <img 
-      src="images/about-hero.jpg" 
+      src="images/about-banner-img.png" 
       alt="IT-Wings Hero"
       class="hero-bg"
       loading="lazy"
