this is souvik commit

--- a/career.html
+++ b/career.html
@@ -207,7 +207,7 @@
         <div class="card-container">
           <div class="card">
             <img
-              src="images/carrier-images/car1.png"
+              src="images/career/c1.jpg"
               alt="Benefits and beyond"
             />
             <h3>Growth With Purpose</h3>
@@ -218,7 +218,7 @@
           </div>
 
           <div class="card">
-            <img src="images/carrier-images/car2.png" alt="Initiatives" />
+            <img src="images/career/c2.jpg" alt="Initiatives" />
             <h3>Driven By Impact</h3>
             <p>
               Every project we undertake is fueled by a commitment to create
@@ -227,7 +227,7 @@
           </div>
 
           <div class="card">
-            <img src="images/carrier-images/car3.png" alt="Culture" />
+            <img src="images/career/c3.jpg" alt="Culture" />
             <h3>Inclusive & Collaborative Culture</h3>
             <p>
               We celebrate diversity, encourage creativity, and value
@@ -241,7 +241,7 @@
       <section class="people-section">
         <div class="people-container">
           <div class="people-image">
-            <img src="images/carrier-images/Purpose.png" alt="Our people" />
+            <img src="images/career/c4.jpg" alt="Our people" />
           </div>
 
           <div class="people-content">
