--- a/request.html
+++ b/request.html
@@ -71,7 +71,7 @@
       </nav>
     </header>
 
-    <!-- Overlay Service / Contact Menus -->
+    <!-- home section -->
     <section class="home-menu-service-setion" id="home-menu-service-setion">
       <div class="home-menu-service-container">
         <div class="nav-service-wrapper">
@@ -86,13 +86,50 @@
               </ul>
             </div>
             <div class="list">
+              <h2>Govt</h2>
+              <ul>
+                <li>Aadher</li>
+                <li>PAN</li>
+                <li>Voter</li>
+                <li>Home Loan</li>
+                <li>Business Loan</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
               <h2>Tech</h2>
               <ul>
-                <li><a href="#">Web Development</a></li>
+                <li>
+                  <a href="./serviceInfo.html?id=web-development"
+                    >Web development</a
+                  >
+                </li>
                 <li>App Development</li>
                 <li>API</li>
                 <li>Cloud</li>
                 <li>Course</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Promotional</h2>
+              <ul>
+                <li>Facebook</li>
+                <li>Youtube</li>
+                <li>Instagram</li>
+                <li>Twitter</li>
+                <li>Threads</li>
+                <li>See More...</li>
+              </ul>
+            </div>
+            <div class="list">
+              <h2>Others</h2>
+              <ul>
+                <li>Graphics design</li>
+                <li>Logo design</li>
+                <li>UI/UX</li>
+                <li>Ads design</li>
+                <li>See More...</li>
               </ul>
             </div>
           </div>
