--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             </div>
             <div class="services-grid">
               <!-- Govt Services -->
-              <a href="service1.html#govt" class="service-card">
+              <a href="#" class="service-card">
                 <div class="icon"><i class="fas fa-id-card"></i></div>
                 <h3>Government Services</h3>
                 <p>
@@ -475,7 +475,7 @@
               </a>
 
               <!-- Tech Services -->
-              <a href="service1.html#tech" class="service-card">
+              <a href="#" class="service-card">
                 <div class="icon"><i class="fas fa-laptop-code"></i></div>
                 <h3>Technology Solutions</h3>
                 <p>
@@ -485,7 +485,7 @@
               </a>
 
               <!-- Promotional Services -->
-              <a href="service1.html#promotional" class="service-card">
+              <a href="#" class="service-card">
                 <div class="icon"><i class="fas fa-bullhorn"></i></div>
                 <h3>Promotional Services</h3>
                 <p>
@@ -495,7 +495,7 @@
               </a>
 
               <!-- Other Services -->
-              <a href="service1.html#others" class="service-card">
+              <a href="#" class="service-card">
                 <div class="icon"><i class="fas fa-palette"></i></div>
                 <h3>Creative & Design</h3>
                 <p>
