fix floating icon

--- a/career.html
+++ b/career.html
@@ -158,7 +158,7 @@
         <!-- ===== Banner 1: Discover Careers ===== -->
         <div
           class="banner-slide"
-          style="background-image: url('images/landing/home-1.jpg')"
+          style="background-image: url('images/contact-banner-5.jpg')"
         >
           <div class="overlay"></div>
           <div class="banner-content">
@@ -206,10 +206,7 @@
 
         <div class="card-container">
           <div class="card">
-            <img
-              src="images/career/c1.jpg"
-              alt="Benefits and beyond"
-            />
+            <img src="images/career/c1.jpg" alt="Benefits and beyond" />
             <h3>Growth With Purpose</h3>
             <p>
               We empower our people to explore, experiment, and excel in an
