--- a/jobs.html
+++ b/jobs.html
@@ -165,7 +165,7 @@
     <!-- Banner -->
     <section
       class="global-banner"
-      style="background-image: url(images/career/career-1.jpg)"
+      style="background-image: url(images/job-banner.jpg)"
     >
       <div class="overlay"></div>
       <div class="container">
