--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
     <!-- banner -->
     <section
       class="global-banner"
-      style="background-image: url(images/career/contact-banner.jpg)"
+      style="background-image: url(images/contact-banner-6.jpg)"
     >
       <div class="container">
         <div class="global-wrapper">
