fix: update links in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               IT Wings Webtech Solutions helps businesses grow through modern IT
               infrastructure, smart software, and strategic innovation.
             </p>
-            <a href="about1.html" class="banner-btn">Learn More</a>
+            <a href="about.html" class="banner-btn">Learn More</a>
           </div>
         </div>
 
@@ -189,7 +189,7 @@
               From web development to cloud integration — we deliver innovative,
               reliable, and customized tech solutions for every business.
             </p>
-            <a href="service1.html" class="banner-btn">Our Services</a>
+            <a href="service.html" class="banner-btn">Our Services</a>
           </div>
         </div>
 
@@ -205,7 +205,7 @@
               Join our learning programs to master web development, software
               engineering, and next-gen IT skills with industry experts.
             </p>
-            <a href="learning.html" class="banner-btn">Start Learning</a>
+            <a href="#" class="banner-btn">Start Learning</a>
           </div>
         </div>
 
@@ -221,7 +221,7 @@
               Explore career opportunities and become part of a passionate team
               shaping the digital future.
             </p>
-            <a href="career1.html" class="banner-btn">Join Our Team</a>
+            <a href="career.html" class="banner-btn">Join Our Team</a>
           </div>
         </div>
       </div>
