feat: add education section and popup modal to enhance user engagement

--- a/about.html
+++ b/about.html
@@ -353,6 +353,49 @@
           <button class="manage-btn">Manage careers</button>
         </div>
       </section>
+
+      <!-- education -->
+      <section class="education-system-section">
+        <div class="container edu-wrapper">
+          <!-- LEFT CONTENT -->
+          <div class="edu-image">
+            <img src="images/career/career-2.jpg" alt="Education System" />
+          </div>
+
+          <!-- RIGHT IMAGE -->
+          <div class="edu-content">
+            <h2>IT-Wings Education System</h2>
+            <p>
+              Learn modern technologies from industry experts through our
+              structured, high-quality online courses. Join thousands of
+              students upgrading their skills every day.
+            </p>
+
+            <ul class="edu-features">
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Structured skill-based
+                courses
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Learn with real-world
+                projects
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Track your progress &
+                achievements
+              </li>
+              <li>
+                <i class="fa-solid fa-circle-check"></i> Instructor-led video
+                content
+              </li>
+            </ul>
+
+            <a href="https://yourdomain.com/learn" class="edu-btn">
+              Start Learning Now
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer -->
